mywork/force-app/main/default/objects/ALM_Job__c/ALM_Job__c.object-meta.xml
<CustomObject>
    <label>ALM Job</label>
    <nameField>
        <displayFormat>AJ-{00000}</displayFormat>
        <label>ALM Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ALM Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>