mywork/force-app/main/default/objects/ALM_Job__c/fields/Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Apex_Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Async ApexJob Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>