mywork/force-app/main/default/objects/ALM_Job__c/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <label>Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>