mywork/force-app/main/default/objects/ALM_Job__c/fields/Excluded_Types__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Types__c</fullName>
    <label>Excluded Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>