mywork/force-app/main/default/objects/ALM_Job__c/fields/Include_Documents__c.field-meta.xml
<CustomField>
    <fullName>Include_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Documents</label>
    <type>Checkbox</type>
</CustomField>