mywork/force-app/main/default/objects/ALM_Job__c/fields/Include_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Include_Permission_Sets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leave unchecked if you don't want Capture to download Permission Sets.  SCAN will still create Permission Set component records in the MCL.  Leaving unchecked will greatly enhance performance.</description>
    <inlineHelpText>Leave unchecked if you don't want Capture to download Permission Sets.  SCAN will still create Permission Set component records in the MCL.  Leaving unchecked will greatly enhance performance.</inlineHelpText>
    <label>Include Permission Sets</label>
    <type>Checkbox</type>
</CustomField>