mywork/force-app/main/default/objects/ALM_Job__c/fields/Include_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Include_Profiles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leave unchecked if you don't want Capture to download Profiles.  SCAN will still create Profile component records in the MCL.  Leaving unchecked will greatly enhance performance.</description>
    <inlineHelpText>Leave unchecked if you don't want Capture to download Profiles.  SCAN will still create Profile component records in the MCL.  Leaving unchecked will greatly enhance performance.</inlineHelpText>
    <label>Include Profiles</label>
    <type>Checkbox</type>
</CustomField>