mywork/force-app/main/default/objects/ALM_Job__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <inlineHelpText>Store the interval in hours for how often the job should run.</inlineHelpText>
    <label>Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>