mywork/force-app/main/default/objects/ALM_Job__c/fields/Last_Failure__c.field-meta.xml
<CustomField>
    <fullName>Last_Failure__c</fullName>
    <label>Last Failure</label>
    <type>DateTime</type>
</CustomField>