mywork/force-app/main/default/objects/ALM_Job__c/fields/Last_Queue_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Queue_Time__c</fullName>
    <inlineHelpText>The time that the job was last queued to run.</inlineHelpText>
    <label>Last Queue Time</label>
    <type>DateTime</type>
</CustomField>