mywork/force-app/main/default/objects/ALM_Job__c/fields/Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Time__c</fullName>
    <label>Last Run Time</label>
    <type>DateTime</type>
</CustomField>