mywork/force-app/main/default/objects/ALM_Job__c/fields/Last_Successful_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Run__c</fullName>
    <label>Last Successful Run</label>
    <type>DateTime</type>
</CustomField>