mywork/force-app/main/default/objects/ALM_Job__c/fields/Login_Error__c.field-meta.xml
<CustomField>
    <fullName>Login_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login Error</label>
    <type>Checkbox</type>
</CustomField>