mywork/force-app/main/default/objects/ALM_Job__c/fields/Mail_To__c.field-meta.xml
<CustomField>
    <fullName>Mail_To__c</fullName>
    <label>Mail To</label>
    <type>Email</type>
</CustomField>