mywork/force-app/main/default/objects/ALM_Job__c/fields/Max_Package_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Package_Size__c</fullName>
    <label>Max Package Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>