mywork/force-app/main/default/objects/ALM_Job__c/fields/Report_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Developer_Name__c</fullName>
    <label>Report Developer Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>