mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Time__c</fullName>
    <inlineHelpText>The time that jobs should finish executing for the day (date value will be ignored). Jobs will not be queued to start after this time.</inlineHelpText>
    <label>Scheduled End Time</label>
    <type>DateTime</type>
</CustomField>