mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_On_Friday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the job should run on Fridays.</inlineHelpText>
    <label>Scheduled On Friday</label>
    <type>Checkbox</type>
</CustomField>