mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_On_Monday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the job should run on Mondays.</inlineHelpText>
    <label>Scheduled On Monday</label>
    <type>Checkbox</type>
</CustomField>