mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_On_Saturday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the job should run on Saturdays.</inlineHelpText>
    <label>Scheduled On Saturday</label>
    <type>Checkbox</type>
</CustomField>