mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_On_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the job should run on Sundays.</inlineHelpText>
    <label>Scheduled On Sunday</label>
    <type>Checkbox</type>
</CustomField>