mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_On_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the job should run on Thursdays.</inlineHelpText>
    <label>Scheduled On Thursday</label>
    <type>Checkbox</type>
</CustomField>