mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_On_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the job should run on Tuesdays.</inlineHelpText>
    <label>Scheduled On Tuesday</label>
    <type>Checkbox</type>
</CustomField>