mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_On_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the job should run on Wednesdays.</inlineHelpText>
    <label>Scheduled On Wednesday</label>
    <type>Checkbox</type>
</CustomField>