mywork/force-app/main/default/objects/ALM_Job__c/fields/Scheduled_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Time__c</fullName>
    <inlineHelpText>The time that jobs should begin executing for the day (date value will be ignored).</inlineHelpText>
    <label>Scheduled Start Time</label>
    <type>DateTime</type>
</CustomField>