mywork/force-app/main/default/objects/ALM_Job__c/fields/Source_Instance__c.field-meta.xml
<CustomField>
    <fullName>Source_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>ALM Jobs</relationshipLabel>
    <relationshipName>ALM_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>