mywork/force-app/main/default/objects/ALM_Job__c/fields/Sync_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Sync_Descriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Descriptions</label>
    <type>Checkbox</type>
</CustomField>