mywork/force-app/main/default/objects/ALM_Job__c/fields/Target_Instance__c.field-meta.xml
<CustomField>
    <fullName>Target_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>ALM Jobs (Target Instance)</relationshipLabel>
    <relationshipName>ALM_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>