mywork/force-app/main/default/objects/ALM_Job__c/fields/Target_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Api_Name__c</fullName>
    <description>Holds the api name of the target object into which snapshots will be stored</description>
    <label>Target Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>