mywork/force-app/main/default/objects/ALM_Job__c/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <label>Tool</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SCAN</fullName>
            </value>
            <value>
                <fullName>Automated Testing</fullName>
            </value>
            <value>
                <fullName>Snapshot</fullName>
            </value>
            <value>
                <fullName>Repo_Sync</fullName>
                <label>Repo Sync</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>