mywork/force-app/main/default/objects/ALM_Job__c/fields/VC_Repo__c.field-meta.xml
<CustomField>
    <fullName>VC_Repo__c</fullName>
    <label>Version Control Repository</label>
    <referenceTo>VC_Repository__c</referenceTo>
    <relationshipLabel>VC Repository</relationshipLabel>
    <relationshipName>ALM_Jobs_VC_Repo</relationshipName>
    <type>Lookup</type>
</CustomField>