mywork/force-app/main/default/objects/ALM_Job__c/validationRules/Minimum_Interval.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Interval</fullName>
    <active>true</active>
    <description>Restricts the minimum interval that can be set</description>
    <errorConditionFormula>AND( Interval__c &lt; 2, NOT( ISPICKVAL( Tool__c, 'Repo_Sync' ) ) )</errorConditionFormula>
    <errorMessage>The minimum interval time is every 2 hours</errorMessage>
</ValidationRule>