mywork/force-app/main/default/objects/ALM_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tool__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Run_Time__c</columns>
    <columns>Last_Successful_Run__c</columns>
    <columns>Last_Failure__c</columns>
    <columns>Login_Error__c</columns>
    <columns>Mail_To__c</columns>
    <columns>Errors__c</columns>
    <columns>Warnings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>