mywork/force-app/main/default/objects/ALM_Job__c/listViews/All_Active_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Active_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Last_Failure__c</columns>
    <columns>Last_Run_Time__c</columns>
    <columns>Last_Successful_Run__c</columns>
    <columns>Login_Error__c</columns>
    <columns>Mail_To__c</columns>
    <columns>Warnings__c</columns>
    <columns>Errors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled,Running</value>
    </filters>
    <label>All Active Jobs</label>
</ListView>